--- a/WebShop.WebUI/Views/Shared/_Layout.cshtml
+++ b/WebShop.WebUI/Views/Shared/_Layout.cshtml
@@ -71,27 +71,27 @@
                 <nav id="menu" class="pull-right">
                     <ul>
                         <li>
-                            <a href="./products.html">Woman</a>
+                            <a href="/Home/ProductList">Woman</a>
                             <ul>
-                                <li><a href="./products.html">Accessories</a></li>
-                                <li><a href="./products.html">Handbags</a></li>
-                                <li><a href="./products.html">Shirts</a></li>
-                                <li><a href="./products.html">Pants</a></li>
-                                <li><a href="./products.html">Pijamas</a></li>
-                                <li><a href="./products.html">Shoes</a></li>
+                                <li><a href="/Home/ProductList">Accessories</a></li>
+                                <li><a href="/Home/ProductList">Handbags</a></li>
+                                <li><a href="/Home/ProductList">Shirts</a></li>
+                                <li><a href="/Home/ProductList">Pants</a></li>
+                                <li><a href="/Home/ProductList">Pijamas</a></li>
+                                <li><a href="/Home/ProductList">Shoes</a></li>
                             </ul>
                         </li>
-                        <li><a href="./products.html">Man</a></li>
+                        <li><a href="/Home/ProductList">Man</a></li>
                         <li>
-                            <a href="./products.html">Sport</a>
+                            <a href="/Home/ProductList">Sport</a>
                             <ul>
-                                <li><a href="./products.html">Running</a></li>
-                                <li><a href="./products.html">Yoga</a></li>
-                                <li><a href="./products.html">Ski</a></li>
+                                <li><a href="/Home/ProductList">Running</a></li>
+                                <li><a href="/Home/ProductList">Yoga</a></li>
+                                <li><a href="/Home/ProductList">Ski</a></li>
                             </ul>
                         </li>
-                        <li><a href="./products.html">Hangbag</a></li>
-                        <li><a href="./products.html">Top Seller</a></li>
+                        <li><a href="/Home/ProductList">Hangbag</a></li>
+                        <li><a href="/Home/ProductList">Top Seller</a></li>
                     </ul>
                 </nav>
             </div>
