--- a/WebShop.WebUI/Views/ProductManager/Create.cshtml
+++ b/WebShop.WebUI/Views/ProductManager/Create.cshtml
@@ -111,6 +111,27 @@
                 <input type="file" id="file" name="file" class="form-control" />
             </div>
         </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Product.filePath2, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2" for="Colour">Main Image</label>
+            <div class="col-md-10">
+                <input type="file" id="file2" name="file2" class="form-control" />
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Product.filePath3, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2" for="Colour">Main Image</label>
+            <div class="col-md-10">
+                <input type="file" id="file3" name="file3" class="form-control" />
+            </div>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Product.filePath4, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2" for="Colour">Main Image</label>
+            <div class="col-md-10">
+                <input type="file" id="file4" name="file4" class="form-control" />
+            </div>
+        </div>
         @*
             <div class="form-group">
                 <label class="control-label col-md-2" for="Colour">Image 2</label>
