--- a/WebShop.WebUI/Views/Home/Index.cshtml
+++ b/WebShop.WebUI/Views/Home/Index.cshtml
@@ -63,9 +63,9 @@
 										<li class="span3">
                                             <div class="product-box">
                                                 <span class="sale_tag"></span>
-                                                <p><a href="#"><img src="~/Content/productImages/@Model.SuggestedProducts.ElementAt(i).Id" alt="" /></a></p>
-                                                <a href="#" class="title">@Model.SuggestedProducts.ElementAt(i).Name</a><br />
-                                                <a href="#" class="category">@Model.SuggestedProducts.ElementAt(i).Manufacture</a>
+                                                <p><a href="/ProductDetails/Index/@Model.SuggestedProducts.ElementAt(i).Id"><img src="@Model.SuggestedProducts.ElementAt(i).Images.FirstOrDefault().Path" alt="" /></a></p>
+                                                <a href="/ProductDetails/Index/@Model.SuggestedProducts.ElementAt(i).Id" class="title">@Model.SuggestedProducts.ElementAt(i).Name</a><br />
+                                                <a href="/ProductDetails/Index/@Model.SuggestedProducts.ElementAt(i).Id" class="category">@Model.SuggestedProducts.ElementAt(i).Manufacture</a>
                                                 <p class="price">$ @Model.SuggestedProducts.ElementAt(i).Price</p>
                                             </div>
 										</li>
@@ -80,9 +80,9 @@
 										<li class="span3">
                                             <div class="product-box">
                                                 <span class="sale_tag"></span>
-                                                <p><a href="#"><img src="~/Content/productImages/@Model.SuggestedProducts.ElementAt(i).Id" alt="" /></a></p>
-                                                <a href="#" class="title">@Model.SuggestedProducts.ElementAt(i).Name</a><br />
-                                                <a href="#" class="category">@Model.SuggestedProducts.ElementAt(i).Manufacture</a>
+                                                <p><a href="/ProductDetails/Index/@Model.SuggestedProducts.ElementAt(i).Id"><img src="@Model.SuggestedProducts.ElementAt(i).Images.FirstOrDefault().Path" alt="" /></a></p>
+                                                <a href="/ProductDetails/Index/@Model.SuggestedProducts.ElementAt(i).Id" class="title">@Model.SuggestedProducts.ElementAt(i).Name</a><br />
+                                                <a href="/ProductDetails/Index/@Model.SuggestedProducts.ElementAt(i).Id" class="category">@Model.SuggestedProducts.ElementAt(i).Manufacture</a>
                                                 <p class="price">$ @Model.SuggestedProducts.ElementAt(i).Price</p>
                                             </div>
 										</li>
@@ -112,9 +112,9 @@
 										<li class="span3">
                                             <div class="product-box">
                                                 <span class="sale_tag"></span>
-                                                <p><a href="#"><img src="~/Content/productImages/@Model.LatestProducts.ElementAt(i).Id" alt="" /></a></p>
-                                                <a href="#" class="title">@Model.LatestProducts.ElementAt(i).Name</a><br />
-                                                <a href="#" class="category">@Model.LatestProducts.ElementAt(i).Manufacture</a>
+                                                <p><a href="/ProductDetails/Index/@Model.LatestProducts.ElementAt(i).Id"><img src="@Model.LatestProducts.ElementAt(i).Images.FirstOrDefault().Path" alt="" /></a></p>
+                                                <a href="/ProductDetails/Index/@Model.LatestProducts.ElementAt(i).Id" class="title">@Model.LatestProducts.ElementAt(i).Name</a><br />
+                                                <a href="/ProductDetails/Index/@Model.LatestProducts.ElementAt(i).Id" class="category">@Model.LatestProducts.ElementAt(i).Manufacture</a>
                                                 <p class="price">$ @Model.LatestProducts.ElementAt(i).Price</p>
                                             </div>
 										</li>
@@ -129,9 +129,9 @@
 										<li class="span3">
                                             <div class="product-box">
                                                 <span class="sale_tag"></span>
-                                                <p><a href="#"><img src="~/Content/productImages/@Model.LatestProducts.ElementAt(i).Id" alt="" /></a></p>
-                                                <a href="#" class="title">@Model.LatestProducts.ElementAt(i).Name</a><br />
-                                                <a href="#" class="category">@Model.LatestProducts.ElementAt(i).Manufacture</a>
+                                                <p><a href="/ProductDetails/Index/@Model.LatestProducts.ElementAt(i).Id"><img src="@Model.LatestProducts.ElementAt(i).Images.FirstOrDefault().Path" alt="" /></a></p>
+                                                <a href="/ProductDetails/Index/@Model.LatestProducts.ElementAt(i).Id" class="title">@Model.LatestProducts.ElementAt(i).Name</a><br />
+                                                <a href="/ProductDetails/Index/@Model.LatestProducts.ElementAt(i).Id" class="category">@Model.LatestProducts.ElementAt(i).Manufacture</a>
                                                 <p class="price">$ @Model.LatestProducts.ElementAt(i).Price</p>
                                             </div>
 										</li>
