Additinoal products added

--- a/WebShop.WebUI/Views/ProductDetails/ProductFilter.cshtml
+++ b/WebShop.WebUI/Views/ProductDetails/ProductFilter.cshtml
@@ -39,7 +39,7 @@
                             <li class="span3">
                                 <div class="product-box">
                                     <span class="sale_tag"></span>
-                                    <a href="/ProductDetails/index/@item.Id"><img alt="" src="@item.Images.FirstOrDefault().Path"></a><br />
+                                    <a href="/ProductDetails/index/@item.Id"><img alt="" src="@item.Images.FirstOrDefault().Path" style="max-height:270px;max-width:270px"></a><br />
                                     <a href="/ProductDetails/index/@item.Id" class="title">@item.Name</a><br />
                                     <a href="#" class="category">@item.SubCategory</a>
                                     <p class="price">@item.Price SEK</p>
