--- a/WebShop.WebUI/Views/Shared/_Layout.cshtml
+++ b/WebShop.WebUI/Views/Shared/_Layout.cshtml
@@ -96,7 +96,7 @@
                             <a href="./products.html">Woman</a>
                             <ul>
                                 <li><a href="./products.html">Accessories</a></li>
-                                <li><a href="./products.html">Handbags</a></li>
+                                <li><a href="./products.html">Dresses</a></li>
                                 <li><a href="./products.html">Shirts</a></li>
                                 <li><a href="./products.html">Pants</a></li>
                                 <li><a href="./products.html">Pijamas</a></li>
