--- a/WebShop.WebUI/Views/WishList/Index.cshtml
+++ b/WebShop.WebUI/Views/WishList/Index.cshtml
@@ -39,5 +39,7 @@
                 <div> No items in favourite !!</div>
             }
 
+            <a href="javascript:history.go(-1)">Click here to go back</a>
+
         </div>
 </section>
