--- a/WebShop.WebUI/Views/Home/Index.cshtml
+++ b/WebShop.WebUI/Views/Home/Index.cshtml
@@ -63,7 +63,7 @@
 										<li class="span3">
                                             <div class="product-box">
                                                 <span class="sale_tag"></span>
-                                                <p><a href="/ProductDetails/Index/@Model.SuggestedProducts.ElementAt(i).Id"><img src="@Model.SuggestedProducts.ElementAt(i).Images.FirstOrDefault().Path" alt="" /></a></p>
+                                                <p><a href="/ProductDetails/Index/@Model.SuggestedProducts.ElementAt(i).Id"><img src="@Model.SuggestedProducts.ElementAt(i).Images.FirstOrDefault().Path" style="max-height:270px;max-width:270px" /></a></p>
                                                 <a href="/ProductDetails/Index/@Model.SuggestedProducts.ElementAt(i).Id" class="title">@Model.SuggestedProducts.ElementAt(i).Name</a><br />
                                                 <a href="/ProductDetails/Index/@Model.SuggestedProducts.ElementAt(i).Id" class="category">@Model.SuggestedProducts.ElementAt(i).Manufacture</a>
                                                 <p class="price">$ @Model.SuggestedProducts.ElementAt(i).Price</p>
@@ -80,7 +80,7 @@
 										<li class="span3">
                                             <div class="product-box">
                                                 <span class="sale_tag"></span>
-                                                <p><a href="/ProductDetails/Index/@Model.SuggestedProducts.ElementAt(i).Id"><img src="@Model.SuggestedProducts.ElementAt(i).Images.FirstOrDefault().Path" alt="" /></a></p>
+                                                <p><a href="/ProductDetails/Index/@Model.SuggestedProducts.ElementAt(i).Id"><img src="@Model.SuggestedProducts.ElementAt(i).Images.FirstOrDefault().Path" style="max-height:270px;max-width:270px" /></a></p>
                                                 <a href="/ProductDetails/Index/@Model.SuggestedProducts.ElementAt(i).Id" class="title">@Model.SuggestedProducts.ElementAt(i).Name</a><br />
                                                 <a href="/ProductDetails/Index/@Model.SuggestedProducts.ElementAt(i).Id" class="category">@Model.SuggestedProducts.ElementAt(i).Manufacture</a>
                                                 <p class="price">$ @Model.SuggestedProducts.ElementAt(i).Price</p>
@@ -112,7 +112,7 @@
 										<li class="span3">
                                             <div class="product-box">
                                                 <span class="sale_tag"></span>
-                                                <p><a href="/ProductDetails/Index/@Model.LatestProducts.ElementAt(i).Id"><img src="@Model.LatestProducts.ElementAt(i).Images.FirstOrDefault().Path" alt="" /></a></p>
+                                                <p><a href="/ProductDetails/Index/@Model.LatestProducts.ElementAt(i).Id"><img src="@Model.LatestProducts.ElementAt(i).Images.FirstOrDefault().Path" style="max-height:270px;max-width:270px" /></a></p>
                                                 <a href="/ProductDetails/Index/@Model.LatestProducts.ElementAt(i).Id" class="title">@Model.LatestProducts.ElementAt(i).Name</a><br />
                                                 <a href="/ProductDetails/Index/@Model.LatestProducts.ElementAt(i).Id" class="category">@Model.LatestProducts.ElementAt(i).Manufacture</a>
                                                 <p class="price">$ @Model.LatestProducts.ElementAt(i).Price</p>
@@ -129,7 +129,7 @@
 										<li class="span3">
                                             <div class="product-box">
                                                 <span class="sale_tag"></span>
-                                                <p><a href="/ProductDetails/Index/@Model.LatestProducts.ElementAt(i).Id"><img src="@Model.LatestProducts.ElementAt(i).Images.FirstOrDefault().Path" alt="" /></a></p>
+                                                <p><a href="/ProductDetails/Index/@Model.LatestProducts.ElementAt(i).Id"><img src="@Model.LatestProducts.ElementAt(i).Images.FirstOrDefault().Path" style="max-height:270px;max-width:270px" /></a></p>
                                                 <a href="/ProductDetails/Index/@Model.LatestProducts.ElementAt(i).Id" class="title">@Model.LatestProducts.ElementAt(i).Name</a><br />
                                                 <a href="/ProductDetails/Index/@Model.LatestProducts.ElementAt(i).Id" class="category">@Model.LatestProducts.ElementAt(i).Manufacture</a>
                                                 <p class="price">$ @Model.LatestProducts.ElementAt(i).Price</p>
