--- a/WebShop.WebUI/Views/ProductDetails/Index.cshtml
+++ b/WebShop.WebUI/Views/ProductDetails/Index.cshtml
@@ -145,7 +145,7 @@
                                         }
                                         else if (number == 1)
                                         {
-                                            progressBarStyle = "background-color:#f44336; width:" + @width.ToString() + "%";
+                                            progressBarStyle = "background-color:#f44336;width:" + @width.ToString() + "%";
                                         }
                                         <div class="pull-left">
                                             <div class="pull-left" style="width:35px; line-height:1;">
@@ -305,7 +305,7 @@
                                                 <li class="span3">
                                                     <div class="product-box">
                                                         <span class="sale_tag"></span>
-                                                        <a href="/ProductDetails/index/@item.Id"><img alt="" src="@item.Images.FirstOrDefault().Path"></a><br />
+                                                        <a href="/ProductDetails/index/@item.Id"><img alt="" src="@item.Images.FirstOrDefault().Path" style="max-height:270px;max-width:270px"></a><br />
                                                         <a href="/ProductDetails/index/@item.Id" class="title">@item.Name</a><br />
                                                         <a href="#" class="category">@item.SubCategory</a>
                                                         <p class="price">@item.Price SEK</p>
