--- a/WebShop.WebUI/Views/ProductDetails/Index.cshtml
+++ b/WebShop.WebUI/Views/ProductDetails/Index.cshtml
@@ -33,25 +33,30 @@
                         </ul>
                     </div>
                     @*display product details*@
-                    <div class="span5">
-                        <address>
-                            @if (@Model.product.Manufacture != null)
-                            {
-                                <strong>Brand:</strong> <span>@Model.product.Manufacture</span><br>
-                            }
-                            <strong>Product Code:</strong> <span>@Model.product.Id</span><br>
-                            @if (@Model.product.Availability == 0)
-                            {
-                                <strong>Availability:</strong> <span>Out Of Stock</span><br>
-                            }
-                            else
-                            {
-                                <strong>Availability:</strong> <span>@Model.product.Availability in Stock</span><br>
-                            }
+                <div class="span5">
+                    <address>
+                        @if (@Model.product.Manufacture != null)
+                        {
+                            <strong>Brand:</strong> <span>@Model.product.Manufacture</span><br>
+                        }
+                        <strong>Product Code:</strong> <span>@Model.product.Id</span><br>
+                        @if (@Model.product.Availability == 0)
+                        {
+                            <strong>Availability:</strong> <span>Out Of Stock</span><br>
+                        }
+                        else
+                        {
+                            <strong>Availability:</strong> <span>@Model.product.Availability in Stock</span><br>
+                        }
 
-                        </address>
-                        <h4><strong>Price: @Model.product.Price SEK</strong></h4>
-                    </div>
+                    </address>
+                    <h4><strong>Price: @Model.product.Price SEK</strong></h4>
+                    @if (Model.product.Discount != 0)
+                    {
+                        <h4><strong>Discount: @(@Model.product.Price-((@Model.product.Price * Model.product.Discount)/100)) SEK</strong></h4>
+                    }
+
+                </div>
                     @*Add to cart the product*@
 
                 <div class="span5">
