images added to product list

--- a/WebShop.WebUI/Views/Home/Index.cshtml
+++ b/WebShop.WebUI/Views/Home/Index.cshtml
@@ -61,7 +61,7 @@
 														<img src="~/Content/images/discounts/@String.Concat(Model.SuggestedProducts.ElementAt(i).Discount,"off.png")" />
 													}
 												</span>
-												<p><a href="#"><img src="~/Content/productImages/@Model.SuggestedProducts.ElementAt(i).Id" alt="" /></a></p>
+												<p><a href="#"><img src="~/Content/productImages/@Model.SuggestedProducts.ElementAt(i).filePath1" alt="" /></a></p>
 												<a href="#" class="title">@Model.SuggestedProducts.ElementAt(i).Name</a><br />
 												<a href="#" class="category">@Model.SuggestedProducts.ElementAt(i).Manufacture</a>
 												@if (Model.SuggestedProducts.ElementAt(i).Discount != 0)
@@ -101,7 +101,7 @@
 														<img src="~/Content/images/discounts/@String.Concat(Model.SuggestedProducts.ElementAt(i).Discount,"off.png")" />
 													}
 												</span>
-												<p><a href="#"><img src="~/Content/productImages/@Model.SuggestedProducts.ElementAt(i).Id" alt="" /></a></p>
+												<p><a href="#"><img src="~/Content/productImages/@Model.SuggestedProducts.ElementAt(i).filePath1" alt="" /></a></p>
 												<a href="#" class="title">@Model.SuggestedProducts.ElementAt(i).Name</a><br />
 												<a href="#" class="category">@Model.SuggestedProducts.ElementAt(i).Manufacture</a>
 												@if (Model.SuggestedProducts.ElementAt(i).Discount != 0)
@@ -157,7 +157,7 @@
 														<img src="~/Content/images/discounts/@String.Concat(Model.LatestProducts.ElementAt(i).Discount,"off.png")" />
 													}
 												</span>
-												<p><a href="#"><img src="~/Content/productImages/@Model.LatestProducts.ElementAt(i).Id" alt="" /></a></p>
+												<p><a href="#"><img src="~/Content/productImages/@Model.LatestProducts.ElementAt(i).filePath1" alt="" /></a></p>
 												<a href="#" class="title">@Model.LatestProducts.ElementAt(i).Name</a><br />
 												<a href="#" class="category">@Model.LatestProducts.ElementAt(i).Manufacture</a>
 												@if (Model.LatestProducts.ElementAt(i).Discount != 0)
@@ -198,7 +198,7 @@
 														<img src="~/Content/images/discounts/@String.Concat(Model.LatestProducts.ElementAt(i).Discount,"off.png")" />
 													}
 												</span>
-												<p><a href="#"><img src="~/Content/productImages/@Model.LatestProducts.ElementAt(i).Id" alt="" /></a></p>
+												<p><a href="#"><img src="~/Content/productImages/@Model.LatestProducts.ElementAt(i).filePath1" alt="" /></a></p>
 												<a href="#" class="title">@Model.LatestProducts.ElementAt(i).Name</a><br />
 												<a href="#" class="category">@Model.LatestProducts.ElementAt(i).Manufacture</a>
 												@if (Model.LatestProducts.ElementAt(i).Discount != 0)
