--- a/WebShop.WebUI/Views/Home/ProductList.cshtml
+++ b/WebShop.WebUI/Views/Home/ProductList.cshtml
@@ -38,7 +38,7 @@
                                     <img src="~/Content/images/discounts/@String.Concat(Model.ListOfProducts.ElementAt(i).Discount,"off.png")" />
                                 }
                             </span>
-                            <p><a href="#"><img src="~/Content/productImages/@Model.ListOfProducts.ElementAt(i).Id" alt="" /></a></p>
+                            <p><a href="#"><img src="~/Content/productImages/@Model.ListOfProducts.ElementAt(i).filePath1" alt="" /></a></p>
                             <a href="#" class="title">@Model.ListOfProducts.ElementAt(i).Name</a><br />
                             <a href="#" class="category">@Model.ListOfProducts.ElementAt(i).Manufacture</a>
                             @if (Model.ListOfProducts.ElementAt(i).Discount != 0)
