Added code comments

--- a/WebShop.WebUI/Views/Basket/BasketItemTable.cshtml
+++ b/WebShop.WebUI/Views/Basket/BasketItemTable.cshtml
@@ -1,5 +1,6 @@
 ﻿@model WebShop.Core.ViewModels.BasketItemViewModel
 
+@*partial view model for the cart*@
 <table class="table table-striped">
     <thead>
         <tr>
