--- a/WebShop.WebUI/Views/Basket/BasketSummary.cshtml
+++ b/WebShop.WebUI/Views/Basket/BasketSummary.cshtml
@@ -1,5 +1,6 @@
 ﻿@model WebShop.Core.ViewModels.BasketSummaryViewModel
 
+@*Menu link that shows the cart*@
 @if (@Model.BasketCount > 0)
 {
     <li class="dropdown">
