--- a/WebShop.WebUI/Views/Basket/Index.cshtml
+++ b/WebShop.WebUI/Views/Basket/Index.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = "Basket";
 }
 
+@*basket page*@
 <section class="header_text sub">
     <img class="pageBanner" src="~/Content/images/banner/banner-2.jpg" alt="">
     <h4><span>Shopping Cart</span></h4>
@@ -128,7 +129,7 @@
             <hr />
             <p class="buttons center">
                 @*<button class="btn" type="button">Update</button>*@
-                <a href="/Product/Index" class="btn" type="button">Continue shopping</a>
+                <a href="/" class="btn" type="button">Continue shopping</a>
                 <a href="/Checkout/Index" class="btn btn-inverse" type="submit" id="checkout">Checkout</a>
             </p>
         </div>
