--- a/WebShop.WebUI/Views/CheckOut/Complete.cshtml
+++ b/WebShop.WebUI/Views/CheckOut/Complete.cshtml
@@ -1,5 +1,6 @@
 ﻿@model WebShop.Core.ViewModels.CheckoutSuccessViewModel
 
+@*succesful completion page for checkout*@
 @{
     ViewBag.Title = "Checkout Complete";
 }
