--- a/WebShop.WebUI/Views/ProductDetails/ProductFilter.cshtml
+++ b/WebShop.WebUI/Views/ProductDetails/ProductFilter.cshtml
@@ -1,5 +1,6 @@
 ﻿@model WebShop.Core.ViewModels.ProductFilterViewModel
 
+@*partial view for the side tab*@
 <div class="span3 col">
     <div class="block">
         <ul class="nav nav-list">
