--- a/WebShop.WebUI/Views/WishList/Index.cshtml
+++ b/WebShop.WebUI/Views/WishList/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "Wish List";
 }
-
+@*display the wishlist similer to basket*@
 <section class="main-content">
     <div class="row">
         <div class="span12">
