--- a/WebShop.WebUI/Views/Shared/_Layout.cshtml
+++ b/WebShop.WebUI/Views/Shared/_Layout.cshtml
@@ -66,6 +66,8 @@
                             Html.RenderAction("BasketSummary", "Basket");
                         }
                     </ul>
+                    @if (User.IsInRole("SuperAdmin"))
+                    {
                         <nav id="menu" class="pull-right">
                             <ul>
                                 <li>
@@ -79,7 +81,8 @@
 
                             </ul>
                         </nav>
-                </div>
+                    }
+                    </div>
 			</div>
 		</div>
 	</div>
